crates/glyph-cli/tests/corpus/valid/imports/kinded_alias_filesystem/main.glyph
import "./lib.glyph" { Mode, mode_name }

skill demo() -> Mode
    description: "Uses both a type and a value with canonical-equal names."
    flow:
        x = mode_name()
        return x
