crates/glyph-cli/tests/corpus/invalid/imports/stdlib_whole_module_alias_pascal_case.glyph
import "@glyph/std" as Std

skill main()
    description: "Stdlib whole-module alias forced to PascalCase — illegal."
    flow:
        return <"x">
